--- a/product.html
+++ b/product.html
@@ -36,7 +36,7 @@ $(function(){
         <div class="menu">
           <div class="menuinner">
             <ul class="menuul">
-              <li><a href="lessen.html"><img src="img/header/menu1_off.png" alt="lessen" class="menu1"></a></li>
+              <li><a href="lesson.html"><img src="img/header/menu1_off.png" alt="lesson" class="menu1"></a></li>
               <li><a href="service.html"><img src="img/header/menu2_off.png" alt="service" class="menu2"></a></li>
               <li><a href="shop.html"> <img src="img/header/menu3_off.png" alt="shop" class="menu3"></a></li>
               <li><a href="about.html"><img src="img/header/menu4_off.png" alt="about" class="menu4"></a></li>
