--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ $(function(){
         <div class="menu">
           <div class="menuinner">
             <ul class="menuul">
-              <li><a href="lessen.html"><img src="img/header/menu1_off.png" alt="lessen" class="menu1"></a></li>
+              <li><a href="lesson.html"><img src="img/header/menu1_off.png" alt="lesson" class="menu1"></a></li>
               <li><a href="service.html"><img src="img/header/menu2_off.png" alt="service" class="menu2"></a></li>
               <li><a href="shop.html"> <img src="img/header/menu3_off.png" alt="shop" class="menu3"></a></li>
               <li><a href="about.html"><img src="img/header/menu4_off.png" alt="about" class="menu4"></a></li>
@@ -61,7 +61,7 @@ $(function(){
   </section>
   <section class="content">
     <div class="topmenu">
-      <a href="lessen.html"><img src="img/top/button1_off.png" alt="lessen" class="button1"></a><!--
+      <a href="lesson.html"><img src="img/top/button1_off.png" alt="lesson" class="button1"></a><!--
     --><a href="service.html"><img src="img/top/button2_off.png" alt="service" class="button2"></a><!--
     --><a href="shop.html"><img src="img/top/button3_off.png" alt="shop" class="button3"></a><!--
     --><a href="about.html"><img src="img/top/button4_off.png" alt="about" class="button4"></a><!--
