--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ $(function(){
           }, function(){
              if (!$(this).hasClass('currentPage')) {
              $(this).attr('src', $(this).attr('src').replace('_on', '_off'));
-        }   });});
+        }   });
+});
+
 </script>
 </head>
 <body>
@@ -34,10 +36,10 @@ $(function(){
         <div class="menu">
           <div class="menuinner">
             <ul class="menuul">
-              <li><a class="lesson" href="lesson.html"><img src="img/header/menu1_off.png" alt="lesson" class="menu1"></a></li>
-              <li><a class="service" href="service.html"><img src="img/header/menu2_off.png" alt="service" class="menu2"></a></li>
-              <li><a class="shop" href="shop.html"> <img src="img/header/menu3_off.png" alt="shop" class="menu3"></a></li>
-              <li><a class="about" href="about.html"><img src="img/header/menu4_off.png" alt="about" class="menu4"></a></li>
+              <li><a href="lesson.html"><img src="img/header/menu1_off.png" alt="lesson" class="menu1"></a></li>
+              <li><a href="service.html"><img src="img/header/menu2_off.png" alt="service" class="menu2"></a></li>
+              <li><a href="shop.html"><img src="img/header/menu3_off.png" alt="shop" class="menu3"></a></li>
+              <li><a href="about.html"><img src="img/header/menu4_off.png" alt="about" class="menu4"></a></li>
             </ul>
           </div>
         </div>
