about.htmlのcurrentをcurrent_4にclass名を変更

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ $(function () {
     /* カレント表示↓ */
 　　path = location.pathname
 　　if(path.match("about")){
-    $("ul.menuul li.about").addClass("current");
+    $("ul.menuul li.about").addClass("current_4");
     }
 
 });
