shop.htmlのcurrentをcurrent_3にclass名を変更

--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,7 @@ $(function(){
     /* カレント表示↓ */
 　　path = location.pathname
 　　if(path.match("shop")){
-    $("ul.menuul li.shop").addClass("current");
+    $("ul.menuul li.shop").addClass("current_3");
     }
 
 });
