service.htmlのcurrentをcurrent_2にclass名を変更

--- a/service.html
+++ b/service.html
@@ -23,7 +23,7 @@ $(function(){
     /* カレント表示↓ */
 　　path = location.pathname
 　　if(path.match("service")){
-    $("ul.menuul li.service").addClass("current");
+    $("ul.menuul li.service").addClass("current_2");
     }
 
 });
