lesson.htmlのcurrentをcurrent_1にclass名を変更

--- a/lesson.html
+++ b/lesson.html
@@ -23,7 +23,7 @@ $(function(){
     /*カレント表示↓ */
 　　path = location.pathname
 　　if(path.match("lesson")){
-    $("ul.menuul li.lesson").addClass("current");
+    $("ul.menuul li.lesson").addClass("current_1");
     }
 
   /* http://coolwebwindow.co m/jquery-lab/archives/99 */
