lesson.htmlのカレント表示を一時的にコメントアウト

--- a/lesson.html
+++ b/lesson.html
@@ -21,55 +21,54 @@ $(function(){
         }   });
 
     /*カレント表示↓ */
+/*
 　　path = location.pathname
 　　if(path.match("lesson")){
     $("ul.menuul li.lesson").addClass("current_1");
     }
-
-  /* http://coolwebwindow.co m/jquery-lab/archives/99 */
-/*
-    $('#.menuul img').each(function(){
-
-          // リンク先のURLを取得
-          var url = $(this).parent('a').attr('href');
-          // 現在表示されているページのURLを取得し、リンク先のURLと照合
-          if(location.href.match(url)) {
-             // マッチすれば、「class="current"」を付加
-             $(this).addClass('current');
-             // マッチしなければ、「class="current"」を削除
-          } else {
-             $(this).removeClass('current');
-          }
-
-          // 画像名を取得
-          var src = $(this).attr('src');
-          // すでに画像名に「_on.」が付いていた場合、ロールオーバー処理をしない
-          if (src.match('_on.')) return;
-
-          // ロールオーバー用の画像名を取得（_onを付加）
-          var src_on = src.replace(/^(.+)(\.[a-z]+)$/, '$1_on$2');
-          // 画像のプリロード（先読み込み）
-          $('<img>').attr('src', src_on);
-
-          // ハイライト用の画像名を取得（_currentを付加）
-          var src_current = src.replace(/^(.+)(\.[a-z]+)$/, '$1_on$2');
-          // 画像のプリロード（先読み込み）
-          $('<img>').attr('src', src_current);
-
-          // クラス名「current」が付く場合、
-          if ($(this).hasClass('current')) {
-             // ハイライト処理
-             $(this).attr('src', src_current);
-          // クラス名「current」が付かない場合、
-          }else {
-             // ロールオーバー処理
-             $(this).hover(
-                function() { $(this).attr('src', src_on); },
-                function() { $(this).attr('src', src); }
-             );
-          }
-       });
 */
+  /* http://coolwebwindow.co m/jquery-lab/archives/99 */
+    $('.menuul img').each(function(){
+      // リンク先のURLを取得
+      var url = $(this).parent('a').attr('href');
+      // 現在表示されているページのURLを取得し、リンク先のURLと照合
+      if(location.href.match(url)) {
+         // マッチすれば、「class="current"」を付加
+         $(this).addClass('current');
+         // マッチしなければ、「class="current"」を削除
+      } else {
+         $(this).removeClass('current');
+      }
+
+      // 画像名を取得
+      var src = $(this).attr('src');
+      // すでに画像名に「_on.」が付いていた場合、ロールオーバー処理をしない
+      if (src.match('_on.')) return;
+
+      // ロールオーバー用の画像名を取得（_onを付加）
+      var src_on = src.replace(/^(.+)(\.[a-z]+)$/, '$1_on$2');
+      // 画像のプリロード（先読み込み）
+      $('<img>').attr('src', src_on);
+
+      // ハイライト用の画像名を取得（_currentを付加）
+      var src_current = src.replace(/^(.+)(\.[a-z]+)$/, '$1_current$2');
+      // 画像のプリロード（先読み込み）
+      $('<img>').attr('src', src_current);
+
+      // クラス名「current」が付く場合、
+      if ($(this).hasClass('current')) {
+         // ハイライト処理
+         $(this).attr('src', src_current);
+      // クラス名「current」が付かない場合、
+      }else {
+         // ロールオーバー処理
+         $(this).hover(
+            function() { $(this).attr('src', src_on); },
+            function() { $(this).attr('src', src); }
+         );
+      }
+   });
+
 });
 </script>
 </head>
@@ -86,7 +85,7 @@ $(function(){
         <div class="menu">
           <div class="menuinner">
             <ul class="menuul">
-              <li class="lesson"><a href="lesson.html"><img src="img/header/menu1_off.png" alt="lesson" class="menu1"></a></li>
+              <li><a href="lesson.html"><img src="img/header/lesson.png" alt="lesson" class="menu1"></a></li>
               <li><a href="service.html"><img src="img/header/menu2_off.png" alt="service" class="menu2"></a></li>
               <li><a href="shop.html"><img src="img/header/menu3_off.png" alt="shop" class="menu3"></a></li>
               <li><a href="about.html"><img src="img/header/menu4_off.png" alt="about" class="menu4"></a></li>
