--- a/service.html
+++ b/service.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="css/style_service.css" type="text/css">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript">
-$(function(){
+/*$(function(){
      $('a img').hover(function(){
         $(this).attr('src', $(this).attr('src').replace('_off', '_on'));
           }, function(){
@@ -20,15 +20,16 @@ $(function(){
              $(this).attr('src', $(this).attr('src').replace('_on', '_off'));
         }   });
 
-    /* カレント表示↓ */
-　　path = location.pathname
-　　if(path.match("service")){
-    $("ul.menuul li.service").addClass("current_2");
-    }
-
+/*カレント表示↓*/
+$(function(){
+  path = location.pathname
+  if(path.match("service")){
+  $("ul.menuul li.service").addClass("current_2");
+  }
 });
 </script>
 </head>
+
 <body>
 <div class="wrapper">
   <header>
@@ -42,10 +43,10 @@ $(function(){
         <div class="menu">
           <div class="menuinner">
             <ul class="menuul">
-              <li><a href="lesson.html"><img src="img/header/menu1_off.png" alt="lesson" class="menu1"></a></li>
-              <li class="service"><a href="service.html"><img src="img/header/menu2_off.png" alt="service" class="menu2"></a></li>
-              <li><a href="shop.html"> <img src="img/header/menu3_off.png" alt="shop" class="menu3"></a></li>
-              <li><a href="about.html"><img src="img/header/menu4_off.png" alt="about" class="menu4"></a></li>
+              <li><a href="lesson.html"><img src="img/header/lesson.png" alt="lesson" class="menu1"></a></li>
+              <li class="service"><a href="service.html"><img src="img/header/service.png" alt="service" class="menu2"></a></li>
+              <li><a href="shop.html"> <img src="img/header/shop.png" alt="shop" class="menu3"></a></li>
+              <li><a href="about.html"><img src="img/header/about.png" alt="about" class="menu4"></a></li>
             </ul>
           </div>
         </div>
