hoverデザイン変更

--- a/index.html
+++ b/index.html
@@ -60,14 +60,50 @@
       </div>
     </div>
   </section>
-  <section class="content">
-    <div class="topmenu">
-      <a href="lesson.html"><img src="img/top/button1_off.png" alt="lesson" class="button1"></a><!--
-    --><a href="service.html"><img src="img/top/button2_off.png" alt="service" class="button2"></a><!--
-    --><a href="shop.html"><img src="img/top/button3_off.png" alt="shop" class="button3"></a><!--
-    --><a href="about.html"><img src="img/top/button4_off.png" alt="about" class="button4"></a><!--
-    --></div>
+
+
+
+ <section class="content">
+
+
+    <div class="box">
+      <a href="lesson.html">
+        <div class="photo" style="background-image:url(img/top/button1.png)">
+        </div>
+        <p class="centerFit">LESSON</p> 
+      </a>
+    </div>
+
+    <div class="box">
+      <a href="service.html">
+        <div class="photo" style="background-image:url(img/top/button2.png)">
+        </div>
+        <p class="centerFit">SERVICE</p> 
+      </a>
+    </div>
+
+    <div class="box">
+      <a href="shop.html">
+        <div class="photo" style="background-image:url(img/top/button3.png)">
+        </div>
+        <p class="centerFit">SHOP</p>
+      </a>
+    </div>
+
+
+    <div class="box">
+      <a href="about.html">
+        <div class="photo" style="background-image:url(img/top/button4.png)">
+        </div>
+        <p class="centerFit">ABOUT</p>
+      </a>     
+    </div>
+
   </section>
+
+
+
+
 <footer>
   <div class="footer">
     <div class="footerinner">
