noindexのタグ修正

--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 <meta neme="keywords" content="花屋,花,andsgarden,アンズガーデン,福岡,習い事">
 <meta name="description" content="andsgarden。福岡市南区野間に在る花屋です。草花や樹々を通して季節を知り・感じて、
 それを生活空間の中に取り入れることによりスローライフなゆるい時間の風景を創るご提案を始めました。">
-<meta name="robots" content="noindex">
+<meta name="robots" content="noindex,nofollow,noarchive">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" href="css/style.css" type="text/css">
 <link rel="stylesheet" href="css/style_gallery.css" type="text/css">
